Fixed bug #43782 (feof() does not detect timeout on socket) # Poll returns 0 if it times out. # We check for 0 and use the user set timeout in set_options by passing -1.